# Copyright (c) 2000. - 2005. EDE Authors
# This program is licenced under terms of the
# GNU General Public Licence version 2 or newer.
# See COPYING for details.

dnl If edeconf.h.in missing, parse this file with autoheader

dnl Add kstat support ??? (Solaris)
dnl Should we add AC_HELP_STRING ???
dnl It seems that RH 7.2 have old autoconf without this macro

AC_PREREQ(2.16)
AC_INIT(EDE, 1.0.3, [karijes@users.sourceforge.net])
AC_DEFINE(VERSION, 103, [Short version number])
AC_CONFIG_HEADER(edeconf.h:edeconf.h.in)

AC_PROG_CXX
AC_PROG_CPP
AC_PATH_PROG(CXX, g++)
AC_PATH_PROG(RM, rm)
AC_PATH_PROG(MSGFMT, msgfmt)
AC_PATH_PROG(MAKEDEPEND, makedepend)

dnl basic headers
AC_PROG_INSTALL
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADER(dirent.h, AC_DEFINE(HAVE_DIRENT_H))
AC_CHECK_HEADER(ndir.h, AC_DEFINE(HAVE_NDIR_H))
AC_CHECK_HEADER(sys/dir.h, AC_DEFINE(HAVE_SYS_DIR_H))
AC_CHECK_HEADER(sys/ndir.h, AC_DEFINE(HAVE_SYS_NDIR_H))

if test "$prefix" = NONE; then
	INSTALL_DIR="/usr/local"
else
	INSTALL_DIR="$prefix"
fi

AC_DEFINE_UNQUOTED(PREFIX, "$INSTALL_DIR", [Default installation place. Overwrite if you like.])

dnl check X11
AC_PATH_X
AC_PATH_XTRA

dnl from old configure.in
AC_CHECK_LIB(X11, Xutf8TextPropertyToTextList, 
			 AC_DEFINE(HAVE_X11_UTF_TEXT_PROP, 1, [Define 1 if XWindows has Xutf extension.]), )


dnl all warnings on
CXXFLAGS="-Wall "

dnl compile silent ?
SILENT=".SILENT:"

dnl home directorty (for config.h)
HOME_DIR="`pwd`"
CURR_DIR=" -I. "
CXXFLAGS="$CXXFLAGS -I$HOME_DIR $CURR_DIR"

AC_ARG_ENABLE(optimize, [  --enable-optimize       compile with optimizations],
			[if eval "test x$enable_optimize = xyes"; then
			   CXXFLAGS="$CXXFLAGS -O2"
			 fi])

AC_ARG_ENABLE(debug, [  --enable-debug          compile with debug information],
			[if eval "test x$enable_debug = xyes"; then
			   CXXFLAGS="$CXXFLAGS -g3 -D_DEBUG"
		   	fi])

AC_ARG_ENABLE(silent, [  --disable-silent        show compiler output],
			[
			 if eval "test x$enable_silent = xno"; then
				 SILENT=""
			 fi
			])


dnl NLS enabled by default

AC_ARG_ENABLE(nls, [  --disable-nls           do not use Native Language Support],,
			  enable_nls=yes)
				
if eval "test x$enable_nls = xyes"; then
	AC_DEFINE(ENABLE_NLS, [], [Define 1 if you want native language support.])
fi
			
			


dnl Check for 'efltk-config'

AC_PATH_PROG(EFLTK_CONFIG, efltk-config)
if test -n "$EFLTK_CONFIG"; then
	CXXFLAGS="$CXXFLAGS `efltk-config --cxxflags`"
	LIBS="`efltk-config --use-images --use-xml --ldflags`"
else
	AC_MSG_ERROR([You don't have efltk installed. To compile Ede, you will need it.])
fi


dnl Check efltk's version.
dnl Less than 2.0.4 is not supported
dnl [45] will match 2.0.4 and 2.0.5 version

AC_MSG_CHECKING(efltk version >= 2.0.4)

EFLTK_VERSION="`efltk-config --version`"
case "$EFLTK_VERSION" in ["2.0."[45]])
	dnl Display 'yes' for efltk version check
	AC_MSG_RESULT(yes)
	;;
	*)
	AC_MSG_ERROR([It seems that you have older efltk version. Required is >= 2.0.4])
esac



dnl From old configure.in
dnl Just checks are we going to use libsupc++ or libstdc++

dnl if test "$CXX" = "gcc";
dnl then
dnl     # Starting with GCC 3.0, you must link C++ programs against either
dnl     # libstdc++ (shared by default), or libsupc++ (always static).  If
dnl     # you care about binary portability between Linux distributions,
dnl     # you need to either 1) build your own GCC with static C++ libraries
dnl     # or 2) link using gcc and libsupc++.  We choose the latter since
dnl     # CUPS doesn't (currently) use any of the stdc++ library.
dnl     #
dnl     # Also, GCC 3.0.x still has problems compiling some code.  You may
dnl     # or may not have success with it.  USE 3.0.x WITH EXTREME CAUTION!
dnl     #
dnl     # Previous versions of GCC do not have the reliance on the stdc++
dnl     # or g++ libraries, so the extra supc++ library is not needed.
dnl 
dnl     AC_MSG_CHECKING(if libsupc++ is required)
dnl 
dnl     SUPC="`$CXX -print-file-name=libsupc++.a 2>/dev/null`"
dnl     case "$SUPC" in
dnl     	libsupc++.a*)
dnl 	    # Library not found, so this is and older GCC...
dnl 	    AC_MSG_RESULT(no)
dnl 	    ;;
dnl 	*)
dnl             # This is gcc 3.x, and it knows of libsupc++, so we need it
dnl             LIBS="$LIBS -lsupc++"
dnl             AC_MSG_RESULT(yes)
dnl 	    ;;
dnl  	esac
dnl fi


AC_SUBST(CXXFLAGS)
AC_SUBST(LIBS)
AC_SUBST(SILENT)
AC_SUBST(HOME_DIR)

AC_OUTPUT(makeinclude datas/startede)
